# obs-image-reaction

./: .clang-format  .gitignore  CMakeLists.txt  README.md  flake.nix
cmake/: ObsPluginHelpers.cmake
cmake/bundle/macos/: Plugin-Info.plist.in
cmake/installer/: installer-Windows.iss.in  installer-macOS.pkgproj.in
src/: image-reaction.c
